<resources>
    <string name="app_name">Sophos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="password">Password</string>
    <string name="ingresa_tus_datos_para_acceder">Ingresa tus datos para acceder</string>
    <string name="menu_item_1">Menu Item 1</string>

    <string-array name="typeOf_doc">
        <item>Tipo de documento</item>
        <item>CC</item>
        <item>TI</item>
        <item>PA</item>
        <item>CE</item>
    </string-array>

</resources>